@@ -5,11 +5,14 @@ DIST gcc-4.3.4-specs-0.1.6.tar.bz2 1145 RMD160 c63913037b6824d5df01199b703985e96
 DIST gcc-4.3.4-uclibc-patches-1.0.tar.bz2 2298 RMD160 111f83201a780a0e8af442b90edddac0465ecccb SHA1 5bbeeeec53d1a3a75a856c30dd0107606a468a03 SHA256 dc475684868cbd38abeb9759bcab1cc6f2de81ff0743a80aef2753f5b1599d00
 DIST gcc-4.3.4.tar.bz2 59368714 RMD160 f23c73a07e15faecaa1bac045f36f4d16be1ddb5 SHA1 cf5248733f26aafa361b3583e74783181eeb88b9 SHA256 e572453bdb74cc4ceebfab9ffb411d9678343dff5bf86e9338d42fdd0818aa65
 DIST gcc-4.4.1-espf-0.3.4.tar.bz2 16533 RMD160 be013f96c6ebd7770b4681e1e251171c79d0d4d2 SHA1 563d727f52092acdbdf54affcc920296c75a9e57 SHA256 3399624fecb8d95fbcc3f5be444d0cf934d7cb7920f296c3d18767615b4d2d61
+DIST gcc-4.4.1-espf-0.3.5.tar.bz2 17609 RMD160 cb881d45bb416ddecadfa2ab64eb81338c268344 SHA1 2cc87869899d803201343f4cc6019d7067bf0909 SHA256 0f022aecbd57d36e2b32aa47f106a00736d99d841479dcab71e834023d52fb96
 DIST gcc-4.4.1-patches-1.0.tar.bz2 11203 RMD160 64d3d6b586442db5313ea49f675371c2fb9fc617 SHA1 85159a40172be6a403c43b268bf23e788ce0697a SHA256 e83392612ff54e4485bad4bb1888b2d247489777807cfaafb8aff3578c39d163
 DIST gcc-4.4.1-specs-0.1.6.tar.bz2 1145 RMD160 c63913037b6824d5df01199b703985e96bc1af00 SHA1 630c10853e43ca30e47e8bdbbf03fa27b11143ca SHA256 6a020f7acbf9a5f7eb74c00515a3389d52b2a3c0bbf2f03b6634240d38667377
+DIST gcc-4.4.1-specs-0.1.7.tar.bz2 1893 RMD160 52c21a4d8a3220660c8a9a71c4ce5977c152df14 SHA1 b4951083d8b715a7a9c7bb065c0b0a4221e69597 SHA256 42adbe507422026514a2cb104e592ae87f5d402929068c43d93d46f835752428
 DIST gcc-4.4.1-uclibc-patches-1.1.tar.bz2 2279 RMD160 b39cd85a9ec615511bb15c65e65aa61295699eda SHA1 8d5662e57533766ed7d63609df0c9d583771a7fc SHA256 b9592d5e14ddb8868599f1da6c2366b179d5a015a7330f819dd0e4fbf8523341
 DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
 EBUILD gcc-4.3.4-r1.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
 EBUILD gcc-4.4.1-r1.ebuild 2023 RMD160 5aa15ccded984ae2dfa34f2b157bf63f70589be0 SHA1 70fdaf8d84e06b82ed08075f3143f4a359438779 SHA256 4a15a77cbb72c700c13088ca19abab448731b9d0804f66a2851d6d063491b2da
-MISC ChangeLog 701 RMD160 764dd5d70e6c01950bfba15ae1122040e0439045 SHA1 de4309071d09f14d11385c7dfcde59387ecfab00 SHA256 d16c12c9d737d6f17608cd477227683db4acc94c30a60bcb657e2ba8808798fe
+EBUILD gcc-4.4.1-r2.ebuild 2023 RMD160 c629460c38ed5812f9a294f0a4683d8831229403 SHA1 89e29bd57d7348aedc0d6abae73a1aacea75bf81 SHA256 e159f425f0e31be027d455ff8dc3c9cb006cdcb81865598859fd467871344516
+MISC ChangeLog 832 RMD160 e5b4a4197d5b8a7aa999c9f8710c0a06087d0b55 SHA1 cf7a6bbbc11b79064a12400196fa6d30506477f6 SHA256 42800c954e08eab74373439fc108ba688fe42a3646c6231402245767c68b26fe
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
